--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
   "name": "MRB-Lite",
-  "title": "Marionette and Require Boilerplate Lite",
+  "title": "Marionette and Require Boilerplate Trimmed",
   "description": "A Lightweight Marionette.js and Require.js Boilerplate that promotes decoupling your JavaScript into modules, separating business logic from application logic using Models and Views, organizing your application into Regions with default build-up/tear-down logic for you Views, including non-AMD Compatible Third Party Scripts in your project, and optimizing all of your JavaScript (minify, concatenate, etc).",
-  "version": "1.0.0",
-  "homepage": "https://github.com/brettjonesdev/MRB-Lite",
+  "version": "0.0.1",
+  "homepage": "https://github.com/jroeckle/Marionette-Require-Boilerplate-Lite",
   "author": {
     "name": "Brett Jones",
     "email": "brettjonesdev@gmail.com",
     "url": "http://www.brettjonesdev.com"
   },
+  "Maintainer": {
+    "name": "Jason Roeckle",
+    "url": "http://www.jasonroeckle.com"
+  },
   "repository": {
     "type": "git",
-    "url": "git@github.com:brettjonesdev/MRB-Lite.git"
-  },
-  "bugs": {
-    "url": "https://github.com/brettjonesdev/MRB-Lite/issues"
+    "url": "git@github.com:jroeckle/Marionette-Require-Boilerplate-Lite.git"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/brettjonesdev/MRB-Lite/blob/master/LICENSE-MIT"
+      "url": "https://github.com/jroeckle/Marionette-Require-Boilerplate-Lite/blob/master/LICENSE-MIT"
     }
   ],
   "dependencies": {
-    "express": "3.x"
+    "express": "3.x",
+    "grunt": "~0.4.0"
   },
   "main": "./server/server",
   "keywords": ["Marionette.js", "Backbone.js", "Require.js", "Marionette and Require Boilerplate Lite"]
