--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   ],
   "dependencies": {
     "express": "3.x",
-    "grunt": "~0.4.0"
+    "grunt": "~0.4.0",
+    "grunt-contrib-concat": "0.3.0",
+    "grunt-contrib-jshint": "0.6.2"
   },
   "main": "./server/server",
   "keywords": ["Marionette.js", "Backbone.js", "Require.js", "Marionette and Require Boilerplate Lite"]
