--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     }
   ],
   "dependencies": {
-    "express": "3.x",
-    "grunt": "~0.4.0",
-    "grunt-contrib-requirejs" : "0.4.3",
-    "grunt-contrib-concat": "0.3.0",
-    "grunt-contrib-jshint": "0.10.0"
+    "express": "4.x",
+    "grunt": "0.4.x",
+    "grunt-contrib-requirejs" : "0.4.x",
+    "grunt-contrib-concat": "0.5.x",
+    "grunt-contrib-jshint": "0.10.x"
   },
   "main": "./server/server",
   "keywords": ["Marionette.js", "Backbone.js", "Require.js", "Marionette and Require Boilerplate Lite"]
